--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,18 @@
  body {
-     background-image: linear-gradient(0deg, #e4e8f2,
+    background: linear-gradient(0deg, #e4e8f2,
              #fcfc05);
-     background-size: 3em;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    text-align: center;
+ }
+
+ #logo-image {
+     width: 100px;
+     height: 100px;
+     margin: 40px 0 0 0;
  }
