--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,20 @@
  body {
-    background: linear-gradient(0deg, #e4e8f2,
-             #fcfc05);
-    position: relative;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    text-align: center;
+     background: linear-gradient(0deg,
+             black,
+             rgba(62, 128, 234, 0.992));
+     position: relative;
+     padding: 0;
+     margin: 0;
+     overflow: hidden;
+     width: 100vw;
+     height: 100vh;
+     display: block;
+     text-align: center;
  }
 
  #logo-image {
-     width: 100px;
-     height: 100px;
+     width: 120px;
+     height: 120px;
      margin: 40px 0 0 0;
+     border-radius: 10px;
  }
