--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,41 @@
- body {
-     background: linear-gradient(0deg,
-             black,
-             rgba(62, 128, 234, 0.992));
-     position: relative;
-     padding: 0;
-     margin: 0;
-     overflow: hidden;
-     width: 100vw;
-     height: 100vh;
-     display: block;
-     text-align: center;
- }
+body {
+    background: linear-gradient(0deg, black, rgba(62, 128, 234, 0.992));
+    position: relative;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    display: block;
+    text-align: center;
+}
 
- #logo-image {
-     width: 120px;
-     height: 120px;
-     margin: 40px 0 0 0;
-     border-radius: 10px;
- }
+#logo-image {
+    width: 120px;
+    height: 120px;
+    margin: 40px 0 0 0;
+    border-radius: 10px;
+}
 
- #htitle {
-     color: orange;
-     font-family: 'Source-Sans-3', cursive;
-     font-weight: bold;
-     font-size: 2em;
- }
+#htitle {
+    color: orange;
+    font-family: 'Source-Sans-3', cursive;
+    font-weight: bold;
+    font-size: 2em;
+}
 
- .hdescription {
-     color: #fafafa;
- }
+.hdescription {
+    color: #fafafa;
+}
+
+#game {
+    background-color: #B8B8B8;
+    box-sizing: border-box;
+    width: 50vw;
+    max-height: 550px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 200px;
+    opacity: 0.7;
+    border-radius: 10px;
+    display: block;
+}
