--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 #game {
-    background-color: #B8B8B8;
+    background-color: #f9f0c6;
     box-sizing: border-box;
     width: 50vw;
     max-height: 550px;
@@ -53,12 +53,22 @@ body {
 .blue-btn {
     background-color: #ecebeb;
     color: #000000;
-    border-radius: 2px;
+    border-radius: 3px;
     border: 2px solid #000000;
     margin-bottom: 40px;
     padding: 4px 6px;
     width: 130px;
     margin: 20px 20px 20px 20px;
-    padding: 4px 6px;
     width: 130px;
+}
+
+/*Input field */
+
+#user {
+    width: 160px;
+    height: 20px;
+    margin: 10px auto auto auto;
+    border: 2px solid #000000;
+    border-radius: 3px;
+
 }
