--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
     margin-right: auto;
     margin-bottom: 200px;
     border-radius: 10px;
-    display: block;
+    display: none;
 }
 
 /*Timer */
