Start and reset button hover  color set up pink and white.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,13 @@ body {
 
 }
 
+.btn--big:hover {
+    background-color: #ff00c1;
+    color: white;
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.5);
+}
+
+
 /*Input field */
 
 #user {
