--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,14 +170,14 @@ body {
 #instructions-area {
     display: none;
     position: fixed;
-    z-index: 111121;
-    top: 31%;
-    left: 25%;
-    background: white;
+    top: 30%;
+    left: 30%;
+    background: rgb(232, 228, 228);
+    border-radius: 10px;
 }
 
 .btn:disabled {
     cursor: not-allowed;
-    color: white;
+    color: rgb(173, 169, 169);
     background-color: #e09dd0;
 }
