--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,13 +167,13 @@ body {
 
 /*Instruction area(game rules)*/
 
-#instructions-area {
-    display: none;
+#instruction-area {
     position: fixed;
     top: 30%;
     left: 30%;
     background: rgb(232, 228, 228);
     border-radius: 10px;
+    display: none;
 }
 
 .btn:disabled {
